# BOXMEOUT_STELLA

./: .gitignore  CODE_CHANGES.md  DELIVERY_REPORT.md  EMERGENCY_OVERRIDE_IMPLEMENTATION.md  IMPLEMENTATION_CHECKLIST.md  PR_BLOCKCHAIN_RETRY.md  PR_DESCRIPTION.md  PR_EMERGENCY_OVERRIDE.md  README.md  RECENT_TRADES_INDEX.md  RECENT_TRADES_SUMMARY.md  WAVE1_SUMMARY.md  build_contracts.sh  build_offline.sh  check-all.sh  fix_git.py  fix_rebase.sh
.github/workflows/: backend.yml  contracts.yml  frontend.yml
backend/: .env.docker  Dockerfile  HEALTH_CHECK.md  docker-compose.yml  fix_blockchain_services.sh  package-lock.json  package.json  test-health-deep.sh  test-lifecycle.sh  tsconfig.json  vitest.integration.config.ts
backend/load-tests/: LOAD_TEST_RESULTS.md  config.js  run-all.sh
backend/prisma/: schema.prisma  seed.ts
backend/src/: index.ts
backend/tests/: auth.integration.test.ts  (+2 more)
contracts/: .gitignore  BUILD.md  RECENT_TRADES_IMPLEMENTATION.md
contracts/contracts/boxmeout/: Cargo.toml  EMERGENCY_OVERRIDE.md  EMERGENCY_OVERRIDE_QUICK_REFERENCE.md  test_event.rs
contracts/contracts/boxmeout/src/: amm.rs  factory.rs  helpers.rs  lib.rs  market.rs  oracle.rs  test_macro.rs  treasury.rs
contracts/contracts/boxmeout/test_snapshots/: test_get_market_state_closed.1.json  test_get_market_state_resolved.1.json  test_get_market_state_with_commitments.1.json  test_sell_shares.1.json
contracts/contracts/boxmeout/tests/: amm_recent_trades.rs  factory_test.rs  integration_test.rs  market_test.rs  oracle_test.rs  treasury_test.rs
frontend/: Waitlist ui.txt
(+55 files in other folders)
